--- a/index.html
+++ b/index.html
@@ -15,15 +15,29 @@
         <input type="text" id="filter" /> 
       </div>
       <div id="content">
-        <div class="column grid_6"></div> 
-        <div class="column grid_6"></div> 
-        <div class="column grid_6"></div> 
-        <div class="column grid_6"></div> 
+        <div class="column grid_6">
+        </div> 
+        <div class="column grid_6">
+        </div> 
+        <div class="column grid_6">
+        </div> 
+        <div class="column grid_6">
+        </div> 
       </div>
+      <div class='clear'></div>
       <div id="footer">
         Author: <a href="http://carlfurrow.com">Carl Furrow</a>
       </div>
     </div>
+
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script type="text/javascript" src="scripts/linkpage.js"></script>
+    <script type="text/javascript" src="scripts/dummy.js"></script>
+    <script type="text/javascript">
+      $(function(){
+        linkpage.attach_keyup($("#filter"));
+        dummy.create();
+      });
+    </script>
   </body>
 </html>
