Now filters and shows output in a new area

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <input type="text" id="filter" /> 
       </div>
       <div id="content">
+        <ul id="results"></ul>
         <div class="column grid_6">
         </div> 
         <div class="column grid_6">
