--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <div id="header">
         <div class='description'>Type here to filter:</div>
         <input type="text" id="filter" /> 
+        <div class='description'>
+          Example: coffescript,css
+        </div>
       </div>
       <div id="content">
         <ul id="results"></ul>
